--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: interactive_i18n
 description: Package for manage translations jsons and widget to let user choose the language
-version: 1.0.5
+version: 1.0.6
 homepage: https://incaview.com
 repository: https://github.com/ivofernandes/interactive_i18n
 
@@ -11,8 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.5
-  shared_preferences: ^2.2.1
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  flutter_sim_country_code: ^0.1.2
   country_icons: ^2.0.2
 
 dev_dependencies:
