--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   interactive_i18n:
     path: ../
+  provider: ^6.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
