--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: interactive_i18n
 description: Package for manage translations jsons and widget to let user choose the language
-version: 1.0.10
+version: 1.0.11
 homepage: https://incaview.com
 repository: https://github.com/ivofernandes/interactive_i18n
 
@@ -12,9 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.2
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.2
   flutter_sim_country_code: ^0.1.2
   country_icons: ^3.0.0
+  flutter_svg: ^2.0.10+1
+
 
 dev_dependencies:
   flutter_test:
